--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,21 +1,12 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 name: Java CI with Gradle
-
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     permissions:
       contents: read
     
@@ -44,21 +35,20 @@ jobs:
         name: backend-jar
         path: backend/build/libs/*.jar
 
-  dependency-submission:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+    # Download artifact for deployment
+    - name: Download artifact
+      uses: actions/download-artifact@v4
       with:
-        java-version: '17'
-        distribution: 'temurin'
-    
-    - name: Generate dependency graph
-      uses: gradle/actions/dependency-submission@v3
+        name: backend-jar
+        path: backend/build/libs
+
+    # Deploy to server
+    - name: Deploy to Server
+      uses: appleboy/ssh-action@v0.1.10
       with:
-        build-root-directory: ./backend
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.PRIVATE_KEY }}
+        port: ${{ secrets.PORT }}
+        script:
+         ~/deploy.sh
