--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,7 +18,8 @@ spring.devtools.livereload.enabled=true
 #logging.level.root = debug
 
 #JWT ?? ? ??
-jwt.secret=my-secret-key-should-be-very-long-for-security
+# JWT ?? ??
+
 
 # ?? ??? ??
 spring.servlet.multipart.enabled=true
@@ -27,5 +28,22 @@ spring.servlet.multipart.max-request-size=10MB
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.config.import=optional:application-db.properties
+
+# Spring Security OAuth2 ??
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+
+# JWT ??
+jwt.secret=${JWT_SECRET}
+jwt.expiration=3600000
+
+
+
+
+
 
 
