Add check-email and check-name

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -35,7 +35,8 @@ spring.config.import=optional:application-db.properties
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=email,profile
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://www.asd1.store/login/oauth2/code/google
+
 
 # JWT ??
 jwt.secret=${JWT_SECRET}
