--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,4 +40,4 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         port: ${{ secrets.PORT }}
         script: |
-          ~/deploy.sh
+         /home/daun/deploy.sh
