--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,6 +14,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: false
     
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -25,7 +27,7 @@ jobs:
       uses: gradle/actions/setup-gradle@v3
     
     - name: Change wrapper permissions
-      run: chmod +x ./backend/gradlew
+      run: chmod +x ./gradlew
     
     - name: Build with Gradle
       working-directory: ./backend
@@ -40,4 +42,5 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         port: ${{ secrets.PORT }}
         script: |
-         /home/daun/deploy.sh
+          cd /home/daun
+          ./deploy.sh
