--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,7 +27,8 @@ jobs:
       uses: gradle/actions/setup-gradle@v3
     
     - name: Change wrapper permissions
-      run: chmod +x ./gradlew
+      working-directory: ./backend
+      run: chmod +x gradlew
     
     - name: Build with Gradle
       working-directory: ./backend
