--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -36,6 +36,6 @@ out/
 ### VS Code ###
 .vscode/
 
-application-db.properties
-application-db.yml
-.env
+**/application-db.properties
+**/application-db.yml
+**/.env
