--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -46,9 +46,9 @@ server:
 
 logging:
   level:
-    root: debug
+#    root: debug
     org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+#    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
 jwt:
   secret: ${JWT_SECRET}
