--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -42,6 +42,11 @@ spring:
 server:
   port: 8080
   address: 0.0.0.0
+  tomcat:
+    remoteip:
+      remote-ip-header: X-Forwarded-For
+      protocol-header: X-Forwarded-Proto
+
 
 logging:
   level:
