--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,5 +43,4 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         port: ${{ secrets.PORT }}
         script: |
-          cd /home/daun
-          ./deploy.sh
+          sudo -u ${{secrets.PERSON}} /home/${{secrets.PERSON}}/deploy.sh
